new: [API] Added an endpoint to the API in order to create new users.
