# testing/api/views.py
@@ -6,6 +6,7 @@ from rest_framework.permissions import IsAdminUser, IsAuthenticated
 from rest_framework.response import Response
 from rest_framework.views import APIView
 
+from authentication.models import User
 from automation.models import HttpAutomatedTest, PingAutomatedTest
 from testing.models import TlsScanHistory
 
@@ -16,7 +17,40 @@ from .serializers import (
     AutomatedTestHTTPSerializer,
     AutomatedTestPingSerializer,
     TlsScanHistorySerializer,
+    UserInputSerializer,
+    UserSerializer,
 )
+
+
+#
+# Model: User
+#
+class UserApiView(APIView):
+    # add permission to check if user is authenticated
+    authentication_classes = [SessionAuthentication, BasicAuthentication]
+    permission_classes = [IsAuthenticated, IsAdminUser]
+
+    @extend_schema(request=None, responses=UserSerializer)
+    def get(self, request, *args, **kwargs):
+        """
+        List the users.
+        """
+        objects = User.objects.all()
+        serializer = UserSerializer(objects, many=True)
+        return Response(serializer.data, status=status.HTTP_200_OK)
+
+    # Create a new object
+    @extend_schema(request=UserInputSerializer, responses=UserSerializer)
+    def post(self, request, *args, **kwargs):
+        """
+        Create a new user.
+        """
+        password = request.data.pop("password")
+        new_user = User.objects.create(**request.data)
+        new_user.set_password(password)
+        new_user.save()
+        serializer = UserSerializer(new_user)
+        return Response(serializer.data, status=status.HTTP_200_OK)
 
 
 #
